# fancy-vcard

./: .flake8  .gitignore  README.md  pyproject.toml
src/fancy_vcard/: broker.py  vcard.py
tests/: test_vcard.py
