[tool.poetry]
name = "fancy-vcard"
version = "0.1.0"
description = ""
authors = ["daniel okoniewski <daniel.okoniewski@gmail.com>"]
readme = "README.md"
packages = [{include = "fancy_vcard", from = "src"}]

[tool.poetry.scripts]
fancy-vcard-cli = "fancy_vcard.broker:main"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
