[tool.poetry]
name = "fancy-vcard"
version = "0.1.0"
description = ""
authors = ["daniel okoniewski <daniel.okoniewski@gmail.com>"]
readme = "README.md"
packages = [{include = "fancy_vcard", from = "src"}]

[tool.poetry.scripts]
fancy-vcard-cli = "fancy_vcard.broker:main"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = "^7.3.1"
image = "^1.5.33"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.pytest.ini_options]
#addopts = "-rfEX -p pytester --strict-markers"
python_files = ["tests/test_*.py"]
